# tycho-simulation

./: CHANGELOG.md  Cargo.toml
.github/workflows/: ci.yaml  tests-and-lints-template.yaml
examples/price_printer/: Readme.md  main.rs  ui.rs  utils.rs
examples/quickstart/: Readme.md  main.rs  utils.rs
src/: lib.rs  models.rs  utils.rs
src/evm/: account_storage.rs  decoder.rs  mod.rs  simulation.rs  stream.rs  tycho_models.rs
src/evm/engine_db/: mod.rs  simulation_db.rs
src/evm/protocol/: filters.rs  mod.rs  u256_num.rs
src/evm/protocol/ekubo/: mod.rs  state.rs  test_pool.rs  tick.rs  tycho_decoder.rs
src/evm/protocol/ekubo/pool/: base.rs  full_range.rs  mod.rs  oracle.rs
src/evm/protocol/uniswap_v2/: state.rs  tycho_decoder.rs
src/evm/protocol/uniswap_v3/: enums.rs  state.rs  tycho_decoder.rs
src/evm/protocol/uniswap_v4/: state.rs  tycho_decoder.rs
src/evm/protocol/utils/: mod.rs
src/evm/protocol/utils/uniswap/: mod.rs  sqrt_price_math.rs  tick_list.rs
src/evm/protocol/vm/: erc20_token.rs  state.rs  state_builder.rs  tycho_decoder.rs  utils.rs
src/protocol/: models.rs  state.rs
tests/assets/decoder/: balancer_v2_delta.json  pancakeswap_v3_snapshot.json  uniswap_v2_delta.json  uniswap_v2_snapshot.json  uniswap_v2_snapshot_broken_id.json  uniswap_v2_snapshot_broken_state.json  uniswap_v3_snapshot.json  uniswap_v4_snapshot.json  uniswap_v4_snapshot_sepolia_block_7239119.json
tycho_simulation_py/: Cargo.toml  pyproject.toml
tycho_simulation_py/python/test/: test_third_party_pool.py
tycho_simulation_py/python/tycho_simulation_py/evm/: decoders.py  pool_state.py
